feat: /search 성능 개선 - 서브쿼리 적용으로 조회 속도 향상
- group by, order by 절이 같이 사용되어 인덱스를 타지 않는 문제
- 두개의 쿼리로 분리하여 in절 서브쿼리로 해결
- 900ms -> 200ms까지 속도 향상